--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -17,7 +17,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}">My Shop</a>
+        <a class="navbar-brand" th:href="@{/}">Nexus Electronics <i class="bi bi-lightning-fill"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -53,18 +53,18 @@
 
                 <!-- Other nav items -->
 
-                <li sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/cart}">Cart</a></li>
+                <li sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/cart}">Cart <i class="bi bi-cart"></i></a></li>
                 <li sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/orders}">Orders</a></li>
 
-                <li class="nav-item"><a class="nav-link" th:href="@{/products}">Products</a></li>
-                <li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/login}">Login</a></li>
+<!--                <li class="nav-item"><a class="nav-link" th:href="@{/products}">Products</a></li>-->
+                <li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/login}">Login <i class="bi bi-box-arrow-in-right"></i></a></li>
                 <li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/register}">Register</a></li>
 <!--                logout-->
                 <li sec:authorize="isAuthenticated()" class="nav-item">
-                    <form th:action="@{/logout}" method="post" style="display:inline;">
+                    <form th:action="@{/logout}" method="post" >
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                        <button type="submit" class="btn btn-link nav-link" style="padding: 0; border: none; background: none;">
-                            Logout
+                        <button type="submit" class="btn btn-link nav-link">
+                            Logout <i class="bi bi-box-arrow-in-left"></i>
                         </button>
                     </form>
                 </li>
