--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <section class="container mt-4">
-  <h1 class="mb-4">Products</h1>
+<!--  <h1 class="mb-4">Products</h1>-->
   <div class="row">
     <div class="col-md-4 mb-4" th:each="product : ${products}">
       <div class="card h-100 shadow-sm">
@@ -26,13 +26,30 @@
           <form th:action="@{/cart/add/{id}(id=${product.id})}" method="post" class="mt-auto">
             <div class="input-group">
               <input type="number" name="quantity" value="1" min="1" class="form-control"/>
-              <button type="submit" class="btn btn-primary">Add to Cart</button>
+              <button type="submit" class="btn btn-primary"><i class="bi bi-cart-plus-fill"></i></button>
             </div>
           </form>
         </div>
       </div>
     </div>
   </div>
+  <div class="d-flex justify-content-center mt-3">
+    <ul class="pagination">
+      <li th:classappend="${currentPage == 0} ? 'disabled'">
+        <a class="page-link" th:href="@{/products(page=${currentPage - 1})}">Previous</a>
+      </li>
+
+      <li th:each="i : ${#numbers.sequence(0, totalPages - 1)}"
+          th:classappend="${i == currentPage} ? 'active'">
+        <a class="page-link" th:href="@{/products(page=${i})}" th:text="${i + 1}"></a>
+      </li>
+
+      <li th:classappend="${currentPage == totalPages - 1} ? 'disabled'">
+        <a class="page-link" th:href="@{/products(page=${currentPage + 1})}">Next</a>
+      </li>
+    </ul>
+  </div>
+
 </section>
 </body>
 </html>
