--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,6 +10,7 @@
 <section class="container mt-5" style="max-width: 500px;">
   <h2 class="text-center mb-4">Login</h2>
   <form th:action="@{/login}" method="post" class="card p-4 shadow-sm rounded">
+    <div th:if="${success_msg}" th:text="${success_msg}" class="alert alert-success" role="alert"></div>
     <div class="mb-3">
       <label class="form-label">Username</label>
       <input type="text" name="username" class="form-control" placeholder="Enter username" required/>
