--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -8,7 +8,16 @@
 </head>
 <body>
 <section class="container mt-4">
-<!--  <h1 class="mb-4">Products</h1>-->
+
+<!--  logout_msg-->
+  <div id="logout-message"
+       th:if="${logout_msg}"
+       th:text="${logout_msg}"
+       class="alert alert-success text-center"
+       style="display: none;">
+  </div>
+  <!--  logout_msg-->
+
   <div class="row">
     <div class="col-md-4 mb-4" th:each="product : ${products}">
       <div class="card h-100 shadow-sm">
@@ -49,6 +58,16 @@
       </li>
     </ul>
   </div>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const msg = document.getElementById("logout-message");
+      if (msg) {
+        msg.style.display = "block";
+        setTimeout(() => msg.style.display = "none", 3000);
+      }
+    });
+  </script>
 
 </section>
 </body>
